Wed Dec 30 11:18:42 2015  Elliot Winkler  <elliot.winkler@gmail.com>

	* lib/forwardable.rb (def_instance_delegator) fix delegating to
	  'args' and 'block', clashing with local variables in generated
	  methods.  [ruby-core:72579] [Bug #11916]

	* lib/forwardable.rb (def_single_delegator): ditto.

Wed Dec 30 09:58:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_inherited_p): search the corresponding
	  ancestor to prepended module from prepending class itself.
	  [ruby-core:72493] [Bug #11878]

Wed Dec 30 09:20:00 2015  Yuki Kurihara  <co000ri@gmail.com>

	* test/stringio/test_io.rb (test_flag): add assertion for error when
	  text and binary mode are mixed.
	  [ruby-dev:49465] [Feature #11921]

Wed Dec 30 08:43:59 2015  Yuki Kurihara  <co000ri@gmail.com>

	* test/stringio/test_stringio.rb (test_initialize): add test for
	  StringIO#initialize.  [ruby-core:72585] [Feature #11920]

Wed Dec 30 05:19:24 2015  Eric Wong  <e@80x24.org>

	* class.c (struct clone_const_arg): adjust for id_table
	  (clone_const): ditto
	  (clone_const_i): ditto
	  (rb_mod_init_copy): ditto
	  (rb_singleton_class_clone_and_attach): ditto
	  (rb_include_class_new): ditto
	  (include_modules_at): ditto
	* constant.h (rb_free_const_table): ditto
	* gc.c (free_const_entry_i): ditto
	  (rb_free_const_table): ditto
	  (obj_memsize_of): ditto
	  (mark_const_entry_i): ditto
	  (mark_const_tbl): ditto
	* internal.h (struct rb_classext_struct): ditto
	* object.c (rb_mod_const_set): resolve class name on assignment
	* variable.c (const_update): replace with const_tbl_update
	  (const_tbl_update): new function
	  (fc_i): adjust for id_table
	  (find_class_path): ditto
	  (autoload_const_set): st_update => const_tbl_update
	  (rb_const_remove): adjust for id_table
	  (sv_i): ditto
	  (rb_local_constants_i): ditto
	  (rb_local_constants): ditto
	  (rb_mod_const_at): ditto
	  (rb_mod_const_set): ditto
	  (rb_const_lookup): ditto
	  [ruby-core:72112] [Feature #11614]
